[1.20.8] - Rewrite TagReportService